--- a/src/app/@theme/layout/footer/footer.component.html
+++ b/src/app/@theme/layout/footer/footer.component.html
@@ -1,3 +1,129 @@
-<div class="footer-content">
-    <p class="mb-0">© Base {{date.getFullYear()}}.</p>
+<div class="footer-content bg-white">
+    <div class="container px-0">
+        <div class="row mx-0">
+            <div class="col-lg-4 col-12 col-about-brand d-grid text-sm-start text-center ps-0 mb-lg-0 mb-5">
+                <div class="logo">
+                    <img src="assets/images/logo/logo.png" />
+                </div>
+                <span class="span-3">
+                    Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing
+                    Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et
+                    Dolore Magna Aliqua
+                </span>
+                <div class="d-flex align-items-center justify-content-sm-start justify-content-center list-icon">
+                    <div class="icon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8 col-12">
+                <div class="row row-info">
+                    <div class="col-sm-3 col-12 d-grid text-sm-start text-center ps-2">
+                        <h6 class="title">
+                            CATALOG
+                        </h6>
+                        <div class="d-grid gap-3 justify-content-sm-start justify-content-center">
+                            <div class="text-a2">
+
+                                Necklaces
+                            </div>
+                            <div class="text-a2">
+                                Hoodies
+                            </div>
+                            <div class="text-a2">
+                                Jewelry Box
+                            </div>
+                            <div class="text-a2">
+                                T-Shirt
+                            </div>
+                            <div class="text-a2">
+                                Jacket
+                            </div>
+                        </div>
+        
+                    </div>
+                    <div class="col-sm-3 col-12 d-grid text-sm-start text-center ps-3">
+                        <h6 class="title">
+                            ABOUT US
+                        </h6>
+                        <div class="d-grid gap-3 justify-content-sm-start justify-content-center">
+                            <div class="text-a2">
+                                Our Producers
+                            </div>
+                            <div class="text-a2">
+                                Sitemap
+                            </div>
+                            <div class="text-a2">
+                                FAQ
+                            </div>
+                            <div class="text-a2">
+                                About Us
+                            </div>
+                            <div class="text-a2">
+                                Terms & Conditions
+                            </div>
+                        </div>
+                    </div>
+        
+                    <div class="col-sm-3 col-12 d-grid text-sm-start text-center ps-5">
+                        <h6 class="title">
+                            CUSTOMER SERVICES
+                        </h6>
+                        <div class="d-grid gap-3 justify-content-sm-start justify-content-center">
+                            <div class="text-a2">
+                                Contact Us
+                            </div>
+                            <div class="text-a2">
+                                Track Your Order
+                            </div>
+                            <div class="text-a2">
+                                Product Care & Repair
+                            </div>
+                            <div class="text-a2">
+                                Book an Appointment
+                            </div>
+                            <div class="text-a2">
+                                Shipping & Returns
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
+
+<div class="bg-black footer-end">
+    <div class="container px-0">
+        <div class="row justify-content-between align-items-center">
+            <div class="col-md-4 col-sm-6 col-12 text-sm-start text-center mb-sm-0 mb-5 px-0">
+                <span class="span-3 text-white">
+                    © 2022 Coral , Inc.
+                </span>
+            </div>
+            <div class="col-md-4 col-sm-6 col-12 d-flex justify-content-center">
+                <div class="list-paypal">
+                    <img src="assets/images/banner/list-paypal.png"/>
+                </div>
+            </div>
+            <div class="col-md-4 col-12 d-flex justify-content-md-end justify-content-center mt-md-0 mt-5 pe-5">
+                <app-button (byClick)="onSrollTop()" className="btn-none-outline btn-icon-sm btn-outline-white mb-0">
+                    Scroll to top
+                    <i class="ms-2 fa-sharp fa-solid fa-arrow-up"></i>
+                </app-button>
+            </div>
+        </div>
+        
+    </div>
+   
 </div>
