--- a/src/app/@theme/styles/scss/soft-ui-dashboard/custom/_badge.scss
+++ b/src/app/@theme/styles/scss/soft-ui-dashboard/custom/_badge.scss
@@ -1,4 +1,4 @@
 .badge{
-  width: fit-content;
-  line-height: 18px;
+  line-height: $badge-line-height;
+  padding: $badge-padding-y $badge-padding-x;
 }
