--- a/src/app/@theme/layout/base/base.component.html
+++ b/src/app/@theme/layout/base/base.component.html
@@ -13,4 +13,15 @@
     </main>
     <app-footer></app-footer>
 </div> -->
-<router-outlet></router-outlet>
+    <header class="bg-dark-5">
+        <div class="container px-0">
+            <app-header></app-header>
+            <app-navbar></app-navbar>
+        </div>
+    </header>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+    <footer>
+        <app-footer></app-footer>
+    </footer>
