--- a/src/app/@theme/styles/scss/soft-ui-dashboard/custom/_typography.scss
+++ b/src/app/@theme/styles/scss/soft-ui-dashboard/custom/_typography.scss
@@ -1,29 +1,101 @@
 .h1,
 h1 {
-  letter-spacing: -1.328px;
+  font-family: $font-family-roboto;
+  font-weight: $font-weight-medium;
+  line-height: 78.52px;
+  letter-spacing: 10%;
 }
 .h2,
 h2 {
-  letter-spacing: -0.996px;
+  font-family: $font-family-roboto;
+  font-weight: $font-weight-medium;
+  line-height: 58.59px;
+  letter-spacing: 0;
 }
 .h3,
-h2 {
-  letter-spacing: -0.83px;
+h3 {
+  font-family: $font-family-roboto;
+  font-weight: $font-weight-medium;
+  line-height: 43.36px;
 }
 .h4,
-h2 {
-  letter-spacing: -0.664px;
+h4 {
+  font-family: $font-family-roboto;
+  font-weight: $font-weight-medium;
+  line-height: 32.81px;
 }
 .h5,
-h2 {
-  letter-spacing: -0.553px;
+h5 {
+  font-family: $font-family-open-sans;
+  font-weight: $font-weight-semibold;
+  line-height: 28.6px;
 }
 .h6,
 h6 {
-  letter-spacing: -0.443px;
+  font-family: $font-family-open-sans;
+  font-weight: $font-weight-semibold;
+  line-height: 22px;
+  letter-spacing: 0;
 }
-.text-sm, .text-xs {
-  letter-spacing: -0.387px;
+
+.text-sm{
+  font-family: $font-family-roboto;
+  font-weight: $font-weight-base;
+  line-height: 24px;
+}
+
+.text-xs{
+  font-family: $font-family-roboto;
+  font-weight: $font-weight-medium;
+  line-height: 24px;
+}
+
+.text-a2{
+  font-size: 0.875rem;
+  font-family: $font-family-open-sans;
+  font-weight: $font-weight-base;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
+.text-a{
+  font-size: 1rem;
+  font-family: $font-family-open-sans;
+  font-weight: $font-weight-base;
+  line-height: 24px;
+  letter-spacing: 0;
+}
+
+.text-body{
+  font-size: $body-font-size;
+  font-family: $font-family-roboto;
+  font-weight: 300;
+  line-height: 55px;
+  letter-spacing: 0;
+}
+
+span{
+  &.span{
+    font-size: $h6-font-size;
+    font-family: $font-family-open-sans;
+    font-weight: $font-weight-semibold;
+    line-height: 22px;
+  }
+
+  &.span-3{
+    font-size: $h6-font-size;
+    font-family: $font-family-open-sans;
+    font-weight: $font-weight-base;
+    line-height: 22px;
+  }
+
+  &.span-2{
+    font-size: 0.875rem;
+    font-family: $font-family-open-sans;
+    font-weight: $font-weight-semibold;
+    line-height: 19.07px;
+    text-decoration: line-through;
+  }
 }
 
 .text {
@@ -33,8 +105,8 @@ h6 {
   &-inter {
     font-family: $font-family-inter;
   }
-  &-poppins {
-    font-family: $font-family-poppins;
+  &-roboto {
+    font-family: $font-family-roboto;
   }
 }
 
