--- a/src/app/@theme/styles/scss/soft-ui-dashboard/custom/forms/_inputs.scss
+++ b/src/app/@theme/styles/scss/soft-ui-dashboard/custom/forms/_inputs.scss
@@ -1,3 +1,9 @@
+.form-control{
+  background-color: transparent;
+  border-bottom: $input-border-bottom;
+  padding: 0.915rem 0.938rem 0.813rem 0.938rem;
+}
+
 textarea {
   &.form-control {
     min-height: 8.75rem;
