--- a/src/app/pages/public/demo/demo.component.html
+++ b/src/app/pages/public/demo/demo.component.html
@@ -1,1 +1,93 @@
-<p>demo works!</p>
+<div class="container">
+  <div class="card mt-3 bg-light-dark">
+    <div class="card-header bg-light-dark">
+      <h3 class="fw-bold">Button</h3>
+    </div>
+    <div class="card-body">
+      <div class="d-flex gap-3">
+        <app-button className="btn-sm btn-icon-sm btn-primary" [classNameIcon]="'me-1'"
+          [icon]="'filter-sm'">Filter</app-button>
+        <app-button className="btn-sm btn-icon-sm btn-dark" [classNameIcon]="'me-1'"
+          [icon]="'filter-sm'">Filter</app-button>
+        <app-button className="btn-sm btn-icon-sm btn-primary" [classNameIcon]="'ms-1'" [icon]="'filter-sm'"
+          typePositionIcon="suffix">Filter</app-button>
+        <app-button className="btn-sm btn-icon-sm btn-dark" [classNameIcon]="'ms-1'" [icon]="'filter-sm'"
+          typePositionIcon="suffix">Filter</app-button>
+      </div>
+      <div class="d-flex gap-3">
+        <app-button className="btn btn-icon btn-primary" [classNameIcon]="'me-2'" [icon]="'shopping-cart-lg-light'">Shop
+          Now</app-button>
+        <app-button className="btn btn-icon btn-dark" [classNameIcon]="'me-2'" [icon]="'shopping-cart-lg-light'">Shop
+          Now</app-button>
+        <app-button className="btn btn-icon btn-primary" [classNameIcon]="'ms-2'" [icon]="'shopping-cart-lg-light'"
+          typePositionIcon="suffix">Shop Now</app-button>
+        <app-button className="btn btn-icon btn-dark" [classNameIcon]="'ms-2'" [icon]="'shopping-cart-lg-light'"
+          typePositionIcon="suffix">Shop Now</app-button>
+      </div>
+
+      <div class="d-flex gap-3">
+        <app-button className="btn-outline-bottom btn-icon-sm btn-outline-primary" [classNameIcon]="'me-1'"
+          [icon]="'fly-sm-primary'">Submit</app-button>
+        <app-button className="btn-outline-bottom btn-icon-sm btn-outline-dark" [classNameIcon]="'me-1'"
+          [icon]="'fly-sm-dark'">Submit</app-button>
+        <app-button className="btn-outline-bottom btn-icon-sm btn-outline-primary" [classNameIcon]="'ms-1'"
+          [icon]="'fly-sm-primary'" typePositionIcon="suffix">Submit</app-button>
+        <app-button className="btn-outline-bottom btn-icon-sm btn-outline-dark" [classNameIcon]="'ms-1'"
+          [icon]="'fly-sm-dark'" typePositionIcon="suffix">Submit</app-button>
+      </div>
+
+      <div class="d-flex gap-3">
+        <app-button className="btn-none-outline btn-icon-sm btn-icon btn-outline-primary" [classNameIcon]="'me-2'"
+          [icon]="'shopping-cart-md-primary'">Shop Now</app-button>
+        <app-button className="btn-none-outline btn-icon-sm btn-outline-white" [classNameIcon]="'me-2'"
+          [icon]="'shopping-cart-md-light'">Shop Now</app-button>
+        <app-button className="btn-none-outline btn-icon-sm btn-outline-primary" [classNameIcon]="'ms-2'"
+          [icon]="'shopping-cart-md-primary'" typePositionIcon="suffix">Shop Now</app-button>
+        <app-button className="btn-none-outline btn-icon-sm btn-outline-white" [classNameIcon]="'ms-2'"
+          [icon]="'shopping-cart-md-light'" typePositionIcon="suffix">Shop Now</app-button>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mt-3">
+    <div class="card-header">
+      <h3 class="fw-bold">Ribbon</h3>
+    </div>
+    <div class="card-body">
+      <div class="d-flex gap-3">
+        <app-button className="btn-ribbon btn-primary">hot</app-button>
+        <app-button className="btn-ribbon btn-dark">save</app-button>
+      </div>
+    </div>
+  </div>
+  <div class="card mt-3">
+    <div class="card-header">
+      <h3 class="fw-bold">Item tab</h3>
+    </div>
+    <div class="card-body">
+      <div class="d-flex gap-3">
+        <p class="text-md">Item</p>
+        <p class="text-md text-dark-50">Item</p>
+        <p class="text-md">Item</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mt-3">
+    <div class="card-header">
+      <h3 class="fw-bold">Card Product</h3>
+    </div>
+    <div class="card-body">
+      <div class="row row-cols-4">
+        <app-card-product></app-card-product>
+        <app-card-product></app-card-product>
+
+      </div>
+    </div>
+  </div>
+  <div class="card mt-3">
+    <div class="card-header">
+      <input type="text" class="form-control" placeholder="Type here...">
+    </div>
+  </div>
+</div>
