--- a/src/app/pages/public/landing-page/landing-page.component.html
+++ b/src/app/pages/public/landing-page/landing-page.component.html
@@ -1,1 +1,310 @@
-<p>landing-page works!</p>
+<div class="bg-black-5 position-relative overflow-hidden">
+  <div class="container px-sm-0 px-3">
+    <section id="collection" class="reveal section-collections">
+      <div class="row m-0 position-relative mx-0">
+        <div class="col-lg-7 col-md-7 col-12 ps-md-1 ps-5 pe-5 col-content">
+          <div class="pe-md-4 pe-0">
+            <div class="text-body title">Collections</div>
+            <div class="content">
+              You Can Explore Ans Shop Many Differnt Collection
+              From Various Barands Here.
+            </div>
+            <app-button className="btn btn-icon btn-dark d-md-flex d-none" [classNameIcon]="'me-2'"
+              [icon]="'shopping-cart-lg-light'">Shop
+              Now</app-button>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-5 col-12 ms-lg-4 ms-0 px-0 position-relative">
+            <img class="img-collections" src="assets/images/banner/image-19.png" />
+        </div>
+        <app-button className="btn btn-icon btn-dark d-md-none d-flex w-100 mt-5" [classNameIcon]="'me-2'"
+          [icon]="'shopping-cart-lg-light'">Shop
+          Now</app-button>
+      </div>
+    </section>
+  </div>
+  <img class="img-bg-flower img-bg-flower-sm" src="assets/images/banner/flower-bg-sm.png"/>
+  <img class="img-bg-flower img-bg-flower-lg" src="assets/images/banner/flower-bg-lg.png"/>
+</div>
+<div class="bg-white">
+  <div class="container px-sm-0 px-3">
+    <section class="reveal section-brand w-100">
+      <swiper [slidesPerView]="slidesPerViewBrand" [spaceBetween]="80" [navigation]="false" [pagination]="false">
+        <ng-template swiperSlide>
+          <img class="img-brand" src="assets/images/brand/brand-05.png" />
+        </ng-template>
+        <ng-template swiperSlide>
+          <img class="img-brand" src="assets/images/brand/brand-01.png" />
+        </ng-template>
+        <ng-template swiperSlide>
+          <img class="img-brand" src="assets/images/brand/brand-03.png" />
+        </ng-template>
+        <ng-template swiperSlide>
+          <img class="img-brand" src="assets/images/brand/brand-02.png" />
+        </ng-template>
+        <ng-template swiperSlide>
+          <img class="img-brand" src="assets/images/brand/brand-04.png" />
+        </ng-template>
+      </swiper>
+    </section>
+    <section class="reveal section-popular-style">
+      <div class="text-rotate">
+        Explore new and popular styles
+      </div>
+      <!-- <div class="row">
+        <div class="col-lg-6 col-12 mb-lg-0 mb-5 ps-0 pe-5">
+          <img class="img-fluid" src="assets/images/banner/image-18.png" />
+        </div>
+        <div class="col-lg-6 col-12 ps-0">
+          <div class="row row-cols-sm-2 row-cols-1 g-5">
+            <div class="col">
+              <img class="img-fluid" src="assets/images/banner/image-01.png" />
+            </div>
+            <div class="col">
+              <img class="img-fluid" src="assets/images/banner/image-03.png" />
+            </div>
+            <div class="col">
+              <img class="img-fluid" src="assets/images/banner/image-02.png" />
+            </div>
+            <div class="col">
+              <img class="img-fluid" src="assets/images/banner/image-20.png" />
+            </div>
+          </div>
+        </div>
+      </div> -->
+     <div class="row">
+      <div class="col-md-6 col-12 mb-md-0 mb-5">
+        <img class="img-fluid" src="assets/images/banner/image-18.png" />
+      </div>
+      <div class="col-md-6 col-12">
+        <div class="row row-cols-sm-2 row-cols-1 gy-5">
+          <div class="col">
+            <img class="img-fluid" src="assets/images/banner/image-01.png" />
+          </div>
+          <div class="col">
+            <img class="img-fluid" src="assets/images/banner/image-03.png" />
+          </div>
+          <div class="col">
+            <img class="img-fluid" src="assets/images/banner/image-02.png" />
+          </div>
+          <div class="col">
+            <img class="img-fluid" src="assets/images/banner/image-20.png" />
+          </div>
+        </div>
+      </div>
+     </div>
+    </section>
+    <section class="reveal section-list-product">
+      <h2 class="title text-center">
+        Or Subscribe To The Newsletter
+      </h2>
+      <div class="type-product">
+        <div class="row mx-0">
+          <div class="col-md-10 col-12 d-flex align-items-center ps-0">
+            <div class="slide-menu">
+              <swiper (slideChange)="onSlideChangeListProduct($event)" [slidesPerView]="slidesPerViewBestSeller"
+                [spaceBetween]="40.33" [navigation]="false" [pagination]="false">
+                <ng-template swiperSlide>
+                  <h6 id="slideListProduct-all" class="mb-0" (click)="filterProductList($event, -1, '')"
+                    [class.text-dark-50]="itemTypeActiveProduct != -1">All product
+                  </h6>
+                </ng-template>
+                <ng-template swiperSlide *ngFor="let type of typeProduct; index as i">
+                  <h6 [id]="'slideListProduct-'+i" class="mb-0" [class.text-dark-50]="itemTypeActiveProduct != i"
+                    (click)="filterProductList($event, i, type.id)">{{type.name}}
+                  </h6>
+                </ng-template>
+              </swiper>
+              <div id="markerListProduct"></div>
+            </div>
+          </div>
+          <div class="col-md-2 col-12 mt-md-0 mt-3 d-flex justify-content-end pe-0">
+            <app-button className="btn-sm btn-icon-sm btn-dark mt-sm-0 mt-3 mb-0" [classNameIcon]="'me-1'"
+              [icon]="'filter-sm'">Filter</app-button>
+          </div>
+        </div>
+      </div>
+      <div class="list-product">
+        <div class="row row-cols-xl-4 row-cols-lg-3 row-cols-md-2 row-cols-1 gy-5">
+          <ng-container *ngIf="isLoadingProductList; else showListProduct">
+            <div *ngFor="let number of [0,1,2,3,4,5,6,7,8]" class="col">
+              <app-card-product-placeholders></app-card-product-placeholders>
+            </div>
+          </ng-container>
+          <ng-template #showListProduct>
+            <div *ngFor="let product of products" class="col">
+              <app-card-product [product]="product"></app-card-product>
+            </div>
+          </ng-template>
+        </div>
+      </div>
+    </section>
+  </div>
+  <section class="reveal bg-black section-brand-collection">
+    <div class="content-group">
+      <img class="img-logo" src="assets/images/brand/logo-md-white.png" />
+      <div class="content text-white">
+        Lustrous Yet Understated. The New Evening
+        Wear Collection Exclusively Offered At The
+        Reopened Giorgio Armani Boutique In Los
+        Angeles.
+      </div>
+      <app-button className="btn btn-icon btn-white mb-0">See Collection</app-button>
+    </div>
+  </section>
+  <div class="bg-white">
+    <div class="container px-sm-0 px-3">
+      <section class="reveal section-best-sellers">
+        <h2 class="title text-center">
+          Best Sellers
+        </h2>
+        <div class="type-product">
+          <div class="row">
+            <div class="col-md-10 col-12 d-flex align-items-center">
+              <div class="slide-menu">
+                <swiper (slideChange)="onSlideChangeBestSeller($event)" [slidesPerView]="slidesPerViewBestSeller"
+                  [spaceBetween]="40.33" [navigation]="false" [pagination]="false">
+                  <ng-template swiperSlide>
+                    <h6 id="slideBestSeller-all" class="mb-0" (click)="filterProductBestSeller($event, -1, '')"
+                      [class.text-dark-50]="itemTypeActiveBestSeller != -1">All product
+                    </h6>
+                  </ng-template>
+                  <ng-template swiperSlide *ngFor="let type of typeProduct; index as i">
+                    <h6 [id]="'slideBestSeller-'+i" class="mb-0" [class.text-dark-50]="itemTypeActiveBestSeller != i"
+                      (click)="filterProductBestSeller($event, i, type.id)">{{type.name}}
+                    </h6>
+                  </ng-template>
+                </swiper>
+                <div id="markerBestSeller"></div>
+              </div>
+
+            </div>
+            <div class="col-md-2 col-12 mt-md-0 mt-3 d-flex justify-content-end">
+              <app-button className="btn-sm btn-icon-sm btn-dark mb-0 mt-sm-0 mt-3">Show All</app-button>
+            </div>
+          </div>
+        </div>
+        <div class="list-product">
+          <ng-container *ngIf="isLoadingProductBestSeller; else showListProductBestSeller">
+            <div class="row row-cols-xl-4 row-cols-lg-3 row-cols-sm-2 row-cols-1">
+              <div *ngFor="let item of [].constructor(itemCardPlaceholderBestSeller)" class="col">
+                <app-card-product-placeholders></app-card-product-placeholders>
+              </div>
+            </div>
+          </ng-container>
+          <ng-template #showListProductBestSeller>
+            <swiper [slidesPerView]="slidesPerViewCardBestSeller" [spaceBetween]="24" [navigation]="true"
+              [pagination]="false">
+              <ng-template *ngFor="let product of productsBestSeller" swiperSlide>
+                <app-card-product [product]="product"></app-card-product>
+              </ng-template>
+            </swiper>
+            <!-- <app-slider-products [products]="productsBestSeller" [slidesPerView]="slidesPerViewCardBestSeller"></app-slider-products> -->
+          </ng-template>
+        </div>
+      </section>
+    </div>
+  </div>
+</div>
+<div class="bg-black-5">
+  <div class="container px-sm-0 px-3">
+    <section class="reveal section-follow">
+      <h2 class="title text-center">
+        Follow Products And Discounts On Instagram
+      </h2>
+      <div class="list-img">
+        <div class="col-img-hover">
+          <img class="img-fluid" src="assets/images/banner/image-06.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col-img-hover">
+          <img class="img-fluid" src="assets/images/banner/image-07.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col-img-hover">
+          <img class="img-fluid" src="assets/images/banner/image-09.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col-img-hover">
+          <img class="img-fluid" src="assets/images/banner/image-05.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col-img-hover">
+          <img class="img-fluid" src="assets/images/banner/image-08.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col-img-hover">
+          <img class="img-fluid" src="assets/images/banner/image-10.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="row row-cols-lg-6 row-cols-md-3 row-cols-sm-2 row-cols-1 list-img mx-0 gy-lg-0 gy-5">
+        <div class="col col-img-hover ps-0">
+          <img class="img-fluid" src="assets/images/banner/image-06.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col col-img-hover ps-0">
+          <img class="img-fluid" src="assets/images/banner/image-07.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col col-img-hover ps-0">
+          <img class="img-fluid" src="assets/images/banner/image-09.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col col-img-hover ps-0">
+          <img class="img-fluid" src="assets/images/banner/image-05.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col col-img-hover ps-0">
+          <img class="img-fluid" src="assets/images/banner/image-08.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <div class="col col-img-hover ps-0">
+          <img class="img-fluid" src="assets/images/banner/image-10.png" />
+          <div class="icon-middle">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+      </div> -->
+
+      
+      <div class="search">
+        <h2 class="title text-center">
+          Or Subscribe To The Newsletter
+        </h2>
+        <div class="row mx-0">
+          <div class="col-lg-2 col-0"></div>
+          <div class="col-lg-8 col-12 text-center px-md-5 px-0">
+            <div class="actions-search d-flex justify-content-between align-items-center">
+              <input type="text" class="form-control" placeholder="Email Address">
+              <app-button className="btn-outline-bottom btn-icon-sm btn-outline-dark mb-0">Submit</app-button>
+            </div>
+          </div>
+          <div class="col-lg-2 col-0"></div>
+        </div>
+      </div>
+    </section>
+  </div>
+</div>
